# cinematch

./: .gitignore  GITHUB_ISSUES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cinematch/: __init__.py  app.py  models.py  movies.py  tmdb_client.py  watchlists.py
cinematch/routers/: movies.py  watchlists.py
cinematch/static/: index.html
tests/: conftest.py  test_api.py  test_movies.py  test_watchlists.py
