[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinematch"
version = "1.0.0"
description = "Movie discovery and watchlist HTTP API powered by TMDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[project.scripts]
cinematch = "cinematch.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cinematch*"]

# ---------------------------------------------------------------------------
# Ruff – linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # Any type allowed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # skip annotation checks in tests

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cinematch --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["tests/*"]
